welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:7: error: not found: value baisseBrose
      baisseBrose()
      ^